# AdventOfCode2023

./: .gitignore  .gitmodules  README.md
aoc-2022-17/: aoc-2022-17.sln
aoc-2022-17/aoc-2022-17/: aoc-2022-17.vcxproj  test.cpp
aoc-2022-17/aoc-2022-17/x64/Debug/: aoc-2022-17.vcxproj.FileListAbsolute.txt
aoc-2022-17/aoc-2022-17/x64/Release/: aoc-2022-17.vcxproj.FileListAbsolute.txt
aoc-23-10/: aoc-23-10.sln
aoc-23-10/aoc-23-10/: aoc-23-10.vcxproj  test.cpp
aoc-23-10/aoc-23-10/x64/Debug/: aoc-23-10.vcxproj.FileListAbsolute.txt
aoc-23-10/aoc-23-10/x64/Release/: aoc-23-10.vcxproj.FileListAbsolute.txt
aoc-23-11/: aoc-23-11.sln
aoc-23-11/aoc-23-11/: aoc-23-11.vcxproj  test.cpp
aoc-23-11/aoc-23-11/x64/Debug/: aoc-23-11.vcxproj.FileListAbsolute.txt
aoc-23-12/: CMakeLists.txt  aoc-23-12.sln  aoc_23_12_test.cpp
aoc-23-12-take-2/: CMakeLists.txt  aoc-12-test.cpp  pex.h
aoc-23-12/aoc-23-12/: aoc-23-12.vcxproj  test.cpp
aoc-23-13/: CMakeLists.txt  aoc-13-test.cpp  pex.h
aoc-23-14/: CMakeLists.txt  aoc-14-test.cpp  pex.h
aoc-23-15/: CMakeLists.txt  aoc-15-test.cpp  pex.h
aoc-23-16/: CMakeLists.txt  aoc-16-test.cpp  pex.h
aoc-23-17/: CMakeLists.txt  aoc-17-test.cpp  pex.h
aoc-23-18/: CMakeLists.txt  aoc-18-test.cpp
aoc-23-19/: CMakeLists.txt  aoc-19-test.cpp  pex.h
aoc-23-20/: CMakeLists.txt  aoc-20-test.cpp  pex.h
aoc-23-21/: CMakeLists.txt  aoc-21-test.cpp
aoc-23-23/: CMakeLists.txt  aoc-23-test.cpp  pex.h
aoc-23-24/: CMakeLists.txt  aoc-24-test.cpp  pex.h
aoc-23-25/: CMakeLists.txt  aoc-25-test.cpp  pex.h
